<?xml version="1.0" encoding="UTF-8"?>
<resources>
  <string name="app_name">Ceaseless</string>
  <string name="search_hint">Search contacts and notes</string>
  <string name="contacts_access_required">Ceaseless requires access to contacts in order to show who to pray for.</string>
  <string name="nav_home">Home</string>
  <string name="nav_people">People</string>
  <string name="nav_journal">Journal</string>
  <string name="nav_home_tutorial">Learn Ceaseless</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_help">Help</string>
  <string name="help_url" translatable="false">http://www.ceaselessprayer.com/android_help.html</string>
  <string name="about_url" translatable="false">http://www.ceaselessprayer.com/android_about.html</string>
  <string name="nav_contact_us">Contact Us</string>
  <string name="nav_about">About</string>
  <string name="nav_subscribe_to_newsletter">Subscribe To Newsletter</string>
  <string name="mailing_list_url" translatable="false">http://www.ceaselessprayer.com/ios_mailing_list.html</string>
  <string name="nav_rate_this_app">Rate This App</string>
  <string name="search_title">Search</string>
  <string name="person_view">Person</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="reminder_notification_title">Prayer reminder</string>
  <string name="reminder_notification_message">Pray for %1$s and %2$s today.</string>
  <plurals name="number_of_other_people">
    <item quantity="one">%d other</item>
    <item quantity="other">%d others</item>
  </plurals>
  <string name="reminder_notification_message_default">Remember to pray for others today.</string>
  <string name="verse_share">Share</string>
  <string name="progress">Progress</string>
  <string name="day">Day</string>
  <string name="prayed_for">You have prayed for %1$d of %2$d people</string>
  <string name="prayed_for_text">You have prayed for</string>
  <string name="prayer_reminders">Reminder:</string>
  <string name="number_of_people_each_day">Number of people to pray for daily:</string>
  <string name="reminder_time_picker_title">Prayer reminder time:</string>
  <string name="reminder_time_picker_dialog_title">Edit reminder time:</string>
  <string name="reminders_on_text">Reminders are on</string>
  <string name="reminders_off_text">Reminders are off</string>
  <string name="default_notification_time">08:30</string>
  <string name="people_active">Active</string>
  <string name="people_favorite">Favorite</string>
  <string name="people_removed">Removed</string>
  <string name="person_remove">Remove</string>
  <string name="person_reactivate">Re-activate</string>
  <string name="person_remove_from_ceaseless">Remove from Ceaseless</string>
  <string name="person_add_to_ceaseless">Add to Ceaseless</string>
  <string name="person_send_message">Send message</string>
  <string name="person_invite">Invite to Ceaseless</string>
  <string name="person_favorite">Favorite Contact</string>
  <string name="person_unfavorite">Unfavorite Contact</string>
  <string name="bulk_selected">%d Selected</string>
  <string name="favorite_on" translatable="false">{fa-heart}</string>
  <!-- do not localize -->
  <string name="favorite_off" translatable="false">{fa-heart-o}</string>
  <!-- do not localize -->
  <string name="person_add_note">Add Note</string>
  <string name="empty_notes">There are no notes</string>
  <string name="note_tag_hint">Tap to tag people</string>
  <string name="note_content_hint">Enter note</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="add_contact">Add Contact</string>
  <string name="sync_contacts">Sync Contacts</string>
  <string name="syncing_contacts">Syncing Contacts...</string>
  <string name="contact_us_message">If you have any questions or feedback about Ceaseless, we\'d love to hear from you.</string>
  <string name="contact_us_social">You can also connect with us on social media.</string>
  <string name="contact_us_web">Visit us on the web: <a href="http://www.ceaselessprayer.com/">ceaselessprayer.com</a></string>
  <string name="contact_us_button">Email Ceaseless</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Sorry, something went wrong...</string>
  <string name="show_more_people">Show more people</string>
  <!-- Image descriptions -->
  <string name="fb" translatable="false">Facebook logo</string>
  <!-- Image descriptions -->
  <string name="twitter">Twitter logo</string>
  <string name="scenic_photo">Scenic photo</string>
  <string name="person_image">Contact photo</string>
  <string name="person_thumbnail">Contact photo thumbnail</string>
  <string name="ceaseless_logo">Ceaseless dove logo</string>
  <!-- Analytics strings -->
  <string name="ga_post_total_active_contacts" translatable="false">post_total_active_ceaseless_contacts</string>
  <string name="ga_post_total_removed_contacts" translatable="false">post_total_removed_ceaseless_contacts</string>
  <string name="ga_post_total_favorited" translatable="false">post_total_favorited_ceaseless_contacts</string>
  <string name="ga_post_total_prayed_for" translatable="false">post_people_prayed_for_this_cycle</string>
  <string name="ga_tapped_send_message" translatable="false">tapped_send_message</string>
  <string name="ga_tapped_add_note" translatable="false">tapped_add_note</string>
  <string name="ga_tapped_share_scripture" translatable="false">share_scripture</string>
  <string name="ga_tapped_invite" translatable="false">tapped_invite</string>
  <string name="ga_tapped_show_more_people" translatable="false">tapped_show_more_people</string>
  <string name="ga_address_book_sync" translatable="false">address_book_sync</string>
  <string name="ga_prayer_progress" translatable="false">prayer_progress</string>
  <string name="ga_person_card_actions" translatable="false">person_card_actions</string>
  <string name="ga_scripture_card_actions" translatable="false">scripture_card_actions</string>
  <string name="ga_progress_card_actions" translatable="false">progress_card_actions</string>
  <!-- Analytics strings -->
  <string name="default_verse_text">And whatever you ask in prayer, you will receive, if you have faith.</string>
  <string name="default_verse_citation">Matthew 21:22, ESV</string>
  <string name="default_verse_link">http://www.bible.is/ENGESV/Matt/21/22</string>
  <!-- search -->
  <string name="no_results_msg">No results</string>
  <!-- tutorial -->
  <string name="tutorial_person_name">Your Best Friend</string>
  <string name="start_tutorial_text">Start Tutorial</string>
  <string name="skip_tutorial_text">Skip Tutorial</string>
  <string name="home_tutorial_intro">Start Praying For Others</string>
  <string name="scripture_tutorial_explanation">Learn to pray from scripture</string>
  <string name="tutorial_swipe_to_see_person">Swipe to see who to pray for</string>
  <string name="tutorial_tap_anywhere_to_hide_menu">Tap anywhere to continue</string>
  <string name="tutorial_favorite_person">Favorite this person if they are important</string>
  <string name="tutorial_send_message">Send a message to encourage this person</string>
  <string name="tutorial_add_note">Write a private note so you remember how to pray for this person</string>
  <string name="tutorial_tap_picture_for_actions">Tap the picture to see actions you can take after praying</string>
  <string name="tutorial_swipe_to_view_progress">Swipe to view progress</string>
  <string name="tutorial_watch_progress">Watch your progress praying for others</string>
  <string name="bible_version">Bible Version</string>
  <string name="bible_version_will_change">Your next Bible verse will use the version you chose.</string>
  <!-- Localizable.strings
  Ceaseless

  Created by Christopher Lim on 10/22/16.
  Copyright © 2016 Christopher Lim. All rights reserved. -->
  <string name="contactsPermissionRequired">This app requires access to your contacts to function properly. Would you like to enable access?</string>
  <string name="I_prayed_for_you_using_the_Ceaseless_app_today.">I prayed for you using the Ceaseless app today. You would like it. 

http://ceaselessprayer.com</string>
  <string name="I_prayed_for_you_today_when_you_came_up_in_my_Ceaseless_app._How_are_you_doing">I prayed for you today when you came up in my Ceaseless app. How are you doing?  

http://ceaselessprayer.com</string>
  <string name="Could_not_send_a_message_because_this_person_is_missing_contact_information.">Could not send a message because this person is missing contact information.</string>
  <string name="Could_not_send_an_invitation_because_this_person_is_missing_contact_information.">Could not send an invitation because this person is missing contact information.</string>
  <string name="Allow_access_action">Allow access</string>
  <string name="Invited_">Invited %@</string>
  <string name="View_in_Contacts">View in Contacts</string>
  <string name="Send_Message">Send Message</string>
  <string name="Add_a_New_Note">Add a New Note</string>
  <string name="Send_Invite">Send Invite</string>
  <string name="Error">Error</string>
  <string name="OK">OK</string>
  <string name="Your_device_doesnt_support_SMS">Your device doesn\'t support SMS!</string>
  <string name="Failed_to_send_SMS">Failed to send SMS!</string>
  <string name="Did_not_send_message.">Did not send message.</string>
  <string name="Ceaseless_Prayer">Ceaseless Prayer</string>
  <string name="___people" formatted="false">%@ / %@ people</string>
  <string name="No_Internet_Connection">No Internet Connection</string>
  <string name="Please_connect_to_the_internet_to_see_this.">Please connect to the internet to see this.</string>
  <string name="Add_new_note">Add new note</string>
  <string name="Add_new_contact">Add new contact</string>
  <string name="Review_Ceaseless">Review Ceaseless</string>
  <string name="Subscribe_to_Newsletter">Subscribe to Newsletter</string>
  <string name="Could_not_show_Ceaseless_in_App_Store.">Could not show Ceaseless in App Store.</string>
  <string name="Ceaseless_for_iOS_Feedback">Ceaseless for iOS Feedback</string>
  <string name="Did_not_send_feedback.">Did not send feedback.</string>
  <string name="Thank_you">Thank you!</string>
  <string name="Thanks_for_your_feedback.">Thanks for your feedback.</string>
  <string name="Ceaseless_only_syncs_contacts_that_have_at_least_a_first_name.">Ceaseless only syncs contacts that have at least a first name.</string>
  <string name="Select_yourself">Select yourself</string>
  <string name="Cancel"></string>
  <string name="Sync_with_Contacts"></string>
  <string name="Add_a_person"></string>
  <string name="Remove"></string>
  <string name="Add"></string>
  <string name="Edit"></string>
  <string name="Save"></string>
  <string name="Add_Note"></string>
  <string name="scriptureLanguageCode"></string>
  <string name="Ready_to_pray_for__and__others_today_Open_the_app_to_start."></string>
  <string name="Ready_to_pray_for__and_others_today_Open_the_app_to_start."></string>
  <string name="Ready_to_pray_for_others_today_Open_the_app_to_start."></string>
  <string name="Day_"></string>
  <string name="ga_tapped_delete" translatable="false">tapped_delete</string>
</resources>
