<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/person_fragment_send_message"
        android:title="@string/person_send_message" />
    <item
        android:id="@+id/person_fragment_invite"
        android:title="@string/person_invite" />
    <item
        android:id="@+id/person_fragment_add_note"
        android:title="@string/person_add_note" />
    <item
        android:id="@+id/person_fragment_favorite"
        android:title="@string/person_favorite" />
    <item
        android:id="@+id/person_fragment_unfavorite"
        android:title="@string/person_unfavorite" />
    <item
        android:id="@+id/person_fragment_remove"
        android:title="@string/person_remove_from_ceaseless" />
    <item
        android:id="@+id/person_fragment_add"
        android:title="@string/person_add_to_ceaseless" />
</menu>
