<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="showNotifications"
        android:summaryOff="@string/reminders_off_text"
        android:summaryOn="@string/reminders_on_text"
        android:title="@string/prayer_reminders" />
    <org.theotech.ceaselessandroid.prefs.TimePickerDialogPreference
        android:defaultValue="@string/default_notification_time"
        android:dialogTitle="@string/reminder_time_picker_dialog_title"
        android:key="notificationTime"
        android:negativeButtonText="@string/reminder_time_picker_cancel"
        android:positiveButtonText="@string/reminder_time_picker_ok"
        android:title="@string/reminder_time_picker_title"
        android:widgetLayout="@layout/notification_time_display" />
</PreferenceScreen>