<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.theotech.ceaselessandroid.fragment.PeopleFragment">

    <com.viewpagerindicator.UnderlinePageIndicator
        android:id="@+id/people_indicator"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        app:selectedColor="@color/listDividerColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/people_active_tab"
            android:layout_width="0dp"
            android:layout_height="@dimen/people_tab_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/people_active"
            android:textColor="@color/peopleTabActiveTextColor"
            android:background="@color/peopleTabActiveBackground"/>

        <TextView
            android:id="@+id/people_favorite_tab"
            android:layout_width="0dp"
            android:layout_height="@dimen/people_tab_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/people_favorite"
            android:textColor="@color/peopleTabInactiveTextColor"
            android:background="@color/peopleTabInactiveBackground"/>

        <TextView
            android:id="@+id/people_removed_tab"
            android:layout_width="0dp"
            android:layout_height="@dimen/people_tab_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/people_removed"
            android:textColor="@color/peopleTabInactiveTextColor"
            android:background="@color/peopleTabInactiveBackground"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/card_separator_height"
        android:background="@color/listDividerColor" />

    <android.support.v4.view.ViewPager
        android:id="@+id/people_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>
