<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="@dimen/card_vertical_margin"
    android:layout_marginLeft="@dimen/card_horizontal_margin"
    android:layout_marginRight="@dimen/card_horizontal_margin"
    android:layout_marginTop="@dimen/card_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="org.theotech.ceaselessandroid.fragment.ContactUsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_vertical_margin"
            android:layout_marginLeft="@dimen/card_horizontal_margin"
            android:layout_marginRight="@dimen/card_horizontal_margin"
            android:layout_marginTop="@dimen/card_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/contact_us_message" />

            <Button
                android:id="@+id/contact_us_button"
                android:layout_width="@dimen/contact_us_button_width"
                android:layout_height="@dimen/contact_us_button_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/contact_us_margin"
                android:background="@color/buttonDefault"
                android:gravity="center"
                android:shadowColor="@color/buttonDefaultShadow"
                android:shadowDx="@integer/button_default_shadow_dx"
                android:shadowDy="@integer/button_default_shadow_dy"
                android:shadowRadius="@integer/button_default_shadow_radius"
                android:text="@string/contact_us_button" />

            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center|start"
                android:text="@string/contact_us_social" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/fb_image"
                    android:layout_width="@dimen/fb_image_width"
                    android:layout_height="@dimen/fb_image_height"
                    android:layout_marginRight="96dp" />

                <ImageView
                    android:id="@+id/twitter_image"
                    android:layout_width="@dimen/twitter_image_width"
                    android:layout_height="@dimen/twitter_image_height" />
            </LinearLayout>

            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center|start"
                android:autoLink="web"
                android:text="@string/contact_us_web" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
